fix footer spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -34,7 +34,7 @@ main {
 }
 
 footer {
-  @apply py-5 text-sm;
+  @apply py-5 text-sm pb-20;
 }
 
 article {
